# Modbus-Visualizer

./: .gitignore  LICENSE  Learn.md  README.md  package.json  plan.dio  plan.md  vite.config.js
public/: 参数模板.xlsx
src/: App.vue  main.js  styles.css
src-tauri/: Cargo.toml  log.txt  modbus.toml  tauri.conf.json  参数模板.xlsx
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/utils/: common.rs  file_handler.rs  mod.rs  modbus_lib.rs
src/router/: index.js
src/router/modules/: monitor.js
src/store/: index.js
src/store/modules/: global.js  greet.js
src/views/monitor/: index.vue
src/views/monitor/components/: param-line.vue  top-bar.vue
