[package]
name = "modbus-monitor"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-close", "window-hide", "window-minimize", "window-show", "window-unminimize", "window-unmaximize", "window-start-dragging", "window-maximize", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
tokio-modbus = { version = "0.6.1", default-features = false, features = ["sync", "tcp"] }
notify = "4.0.17"
toml = "0.6.0"
log = "0.4"
simplelog = "0.12.0"
dirs = "5.0.0"
tokio = { version = "1", features = ["full"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
